<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <!-- Menu -->
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_about" translatable="false">About</string>

    <!-- Common -->
    <string name="confirm_to_exit" translatable="false">Tap \'Back\' again to exit the app.</string>
    <string name="select_node" translatable="false">Select a Node</string>
    <string name="value_not_set" translatable="false">Not Set</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="loading" translatable="false">LOADING…</string>

    <!-- Profile -->
    <string name="add_profile_methods_ss_url" translatable="false">By SS Url</string>

    <!-- Login -->
    <string name="login" translatable="false">Login</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="forgot_password" translatable="false">Forgot Password?</string>
    <string name="guest" translatable="false">Guest</string>
    <string name="sign_up" translatable="false">Sign up an account</string>
    <string name="forgot_password_title" translatable="false">Forgot Password</string>
    <string name="please_enter_email" translatable="false">Please Enter Your Email</string>
    <string name="submit" translatable="false">Submit</string>

    <!-- Home -->
    <string name="selector_select_server">Select Server</string>
    <string name="connection_status_is">Connection Status：%s</string>

</resources>