<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="@dimen/font_text_size_l"
            android:textStyle="bold"
            android:textColor="@color/md_white_1000"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.1"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_size_super"
            android:layout_marginEnd="@dimen/padding_size_super"
            android:theme="@style/MyTextInputLayoutStyle"
            app:hintTextAppearance="@style/MyTextInputHintStyle"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/text_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.08">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                tools:text="000000000000"
                android:textSize="@dimen/font_text_size_s"
                android:textColor="@color/md_white_1000"
                android:paddingStart="@dimen/padding_size_m"
                android:paddingEnd="@dimen/padding_size_m"
                android:paddingTop="@dimen/padding_size_xl"
                android:paddingBottom="@dimen/padding_size_xl" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_size_super"
            android:layout_marginEnd="@dimen/padding_size_super"
            android:theme="@style/MyTextInputLayoutStyle"
            app:hintTextAppearance="@style/MyTextInputHintStyle"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/layout_emailInput"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.05">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:text=""
                android:textSize="@dimen/font_text_size_s"
                android:textColor="@color/md_white_1000"
                android:letterSpacing="0.3"
                android:paddingStart="@dimen/padding_size_m"
                android:paddingEnd="@dimen/padding_size_m"
                android:paddingTop="@dimen/padding_size_xl"
                android:paddingBottom="@dimen/padding_size_xl" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_forgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_size_m"
            android:layout_marginEnd="@dimen/padding_size_xxl"
            android:layout_marginTop="@dimen/padding_size_l"
            android:text="@string/forgot_password"
            android:textColor="@color/md_cyan_A400"
            android:textSize="@dimen/font_text_size_s"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toBottomOf="@+id/layout_passwordInput"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/md_grey_900"
            android:paddingTop="@dimen/padding_size_l"
            android:paddingBottom="@dimen/padding_size_l"
            android:layout_marginStart="@dimen/padding_size_super"
            android:layout_marginEnd="@dimen/padding_size_super"
            android:layout_marginTop="@dimen/padding_size_xxl"
            android:background="@drawable/background_button_white_corner_10dp"
            app:layout_constraintTop_toBottomOf="@+id/text_forgotPass" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_guest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guest"
            android:textColor="@color/md_grey_900"
            android:paddingTop="@dimen/padding_size_l"
            android:paddingBottom="@dimen/padding_size_l"
            android:layout_marginStart="@dimen/padding_size_super"
            android:layout_marginEnd="@dimen/padding_size_super"
            android:background="@drawable/background_button_white_corner_10dp"
            app:layout_constraintTop_toBottomOf="@+id/button_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.65"/>

        <TextView
            android:id="@+id/text_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_size_s"
            android:padding="@dimen/padding_size_m"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sign_up"
            android:textColor="@color/md_cyan_A400"
            android:textSize="@dimen/font_text_size_s"
            android:background="?selectableItemBackground"
            app:layout_constraintTop_toBottomOf="@+id/button_guest"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>